<resources>
    <string name="app_name">Tamil Christian Worship Songs </string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="action_about">About</string>
    <string name="text_settings">Text settings</string>
    <string name="Lyrics_preference_settings">Lyrics Preference</string>
    <string name="tamil">Tamil</string>
    <string name="tamilLyricsSummary">Display tamil lyrics</string>
    <string name="romanised">Romanised</string>
    <string name="romanisedLyricsSummary">Display romanised lyrics</string>
    <string name="pref_color_settings">Primary Screen</string>
    <string name="font_size_summary">Change the font size for text</string>
    <string name="secondary_summary">Change the color for Tamil</string>
    <string name="secondary_color">Tamil</string>
    <string name="primary_summary">Change the color for English/Romanised</string>
    <string name="primary_color">English/Romanised</string>
    <string name="presentation_color_settings_title">Presentation Screen</string>
    <string name="presentation_background_color_summary">Change the color for background</string>
    <string name="background_color_title">Background</string>
    <string name="presentation_secondary_color_summary">Change the color for tamil</string>
    <string name="presentation_secondary_color_title">Tamil</string>
    <string name="presentation_primary_color_title">English/Romanised</string>
    <string name="presentation_primary_color_summary">Change the color for English/Romanised</string>
    <string name="pref_screen_settings">Screen Settings</string>
    <string name="awakeScreenSummary">Keep the screen awake while viewing a song</string>
    <string name="awakeScreenTitle">Keep the screen awake</string>
    <string name="pref_video_settings">Video Settings</string>
    <string name="playVideoTitle">Play video</string>
    <string name="videoPlaySummary">Enable/Disable video playing</string>
    <string name="displaySongbookTitle">Display song book</string>
    <string name="displaySongbookSummary">Display song book below songs</string>
    <string name="advanced">Advanced</string>
    <string name="home_view_category_title">Home view settings</string>
    <string name="tab_choice_summary">Choose or reorder tab items in main screen</string>
    <string name="tab_choice_title">Change tab items</string>
    <string name="live_share_summary">Configured Dropbox shared folder path for live share songs</string>
    <string name="live_share_title">Live share path</string>
    <string name="Play">Play</string>
    <string name="remote_display_settings">Remote Display settings</string>
    <string name="remote_display_summary">Show/Hide song in remote display</string>
    <string name="remote_display_title">Present song</string>
    <string name="present">Present song</string>
    <string name="fontSize">Font size</string>
    <string name="addToPlayList">Add to favourite</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="slide">Slide: </string>
    <string name="playlist_name_hint">Enter favourite name</string>
    <string name="delete">Delete</string>
    <string name="remove_favourite_song_title">Remove from favourite list</string>
    <string name="remove_favourite_song_message">Do you want to remove the song from this favourite list?</string>
    <string name="message_delete_playlist">Do you want to delete the favourite list %1$s?</string>
    <string name="message_song_not_available">%1$s is not in this database or its title may have changed</string>
    <string name="home">Worship songs</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="song_book">Song book</string>
    <string name="titles">Titles</string>
    <string name="artists">Authors</string>
    <string name="playlists">Favourites</string>
    <string name="song_books">Song books</string>
    <string name="categories">Categories</string>
    <string name="live_share">Live share</string>
    <string name="share">Share</string>
    <string name="share.info">Content shared from:
        https://play.google.com/store/apps/details?id=org.worshipsongs
    </string>
    <string name="verse_share_info">Content shared from %1$s app</string>
    <string name="app_download_info">You can download this app here: https://play.google.com/store/apps/details?id=org.worshipsongs
    </string>
    <string name="background_color">Background color</string>
    <string name="warning">Warning</string>
    <string name="message_database_invalid">You have chosen an invalid database! Please choose a valid database.</string>
    <string name="type">Import OpenLP database from</string>
    <string name="message_database_confirmation">Are you sure that you want to revert to the default database?</string>
    <string name="message_choose_local_db_confirmation">Are you sure you want to import %1$s? </string>
    <string name="message.database.successfull">Database copied successfully</string>
    <string name="message.network.warning"><![CDATA[Make sure your device is connected to the internet. You can configure either Settings -> Wi-Fi or Settings -> Mobile Data.]]></string>
    <string name="confirmation">Confirmation</string>
    <string name="remoteUrl">https://raw.githubusercontent.com/crunchersaspire/worshipsongs-db-dev/master/songs.sqlite</string>
    <string name="url">URL</string>
    <string name="import_database">Import database</string>
    <string name="revert_to_default_database">Restore default database</string>
    <string name="songs_count">"No. of songs: %1$s"</string>
    <string name="database">Database</string>
    <string name="database_summary">Import OpenLP database from local storage/remote URL or revert to default database</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="import_database_title">Import OpenLP database</string>
    <string name="message_invalid_url">You have entered an invalid URL! Please enter a valid URL.</string>
    <string name="import_database_successfull">Imported database successfully.</string>
    <string name="downloading_title"><![CDATA[Downloading database...]]></string>
    <string name="rate_this_app">Rate us</string>
    <string name="feedback">Send feedback</string>
    <string name="feedback_subject">Worship Songs Android Feedback - %1$s</string>
    <string name="version">Version: %1$s</string>
    <string name="app_description"><![CDATA[Tamil Christian Worship Songs Android app brings you most of the Praise & Worship lyrics used by Tamil churches all over the world. Now, you can worship anytime, anywhere with all the lyrics you need.\n]]></string>
    <string name="reset_default_title">Reset to default</string>
    <string name="reset_default_summary">Reset other settings to default</string>
    <string name="search_title">Search by</string>
    <string name="hint_title">Search by title</string>
    <string name="hint_content">Search by content</string>
    <string name="tamil_key">தமிழ்</string>
    <string name="english_key">English</string>
    <string name="language_title">Language</string>
    <string name="language_sub_title">Please choose your preferred display language</string>
    <string name="export_pdf">Share as PDF</string>
    <string name="export_OpenLPService">Share as OpenLP Service</string>
    <string name="updates_title">Song Updates</string>
    <string name="message_no_update">Songs are up to date</string>
    <string name="message_update_available">Song update available. Do you want to update songs?</string>
    <string name="download_song_database">Downloading songs</string>
    <string name="update_songs">Update songs</string>
    <string name="message_warning_internet_connection">Internet connection is needed to update the songs</string>
    <string name="message_configure_invalid_url">You have configured an invalid URL in Settings! Please configured a valid URL.</string>
    <string name="message_update_song_successfull">Updated songs successfully</string>
    <string name="favourite_info_message_">You haven\'t created any Favourite yet! Favourites are a great way to organize selected songs for events.To add a song to a Favourites, tap the : icon near a song and select the Add to Favourite action.</string>
    <string name="check_update_message">Checking for song updates...</string>
    <string name="permission">Permission</string>
    <string name="storage_permission_meaage">Tamil christian Worshipsongs doesn\'t have permission to write file on storage. Tap on settings to enable storage permission</string>
    <string name="favourite_title">Add favourite</string>
    <string name="font_size">Font size</string>
    <string name="noOfSongsAvailable">%1$d Songs are available</string>
    <string name="hint_title_or_number">Search by title or song book number</string>
    <string name="search_title_or_content">Title or Song book number</string>
    <string name="search_type_title">Title</string>
    <string name="search_type_content">Content</string>
    <string name="song_book_no">Song no</string>
    <string name="rearrange_song_order">Do you know that you can rearrange the songs by dragging this icon up or down?</string>
    <string name="no_of_songs"> %1$s songs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="message_songs_not_existing">Please update songs, imported favourite songs not existing in database</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Choose theme</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="live_share_hint">Enter dropbox shared folder path</string>
    <string name="live_share_info_message"><![CDATA[

    <p> Live Share (Beta) </p>
    <p> Live Share lets you share a list of songs with others through a Dropbox shared folder. This can help you prepare songs for a meeting (e.g Sunday Service) with others. </p>
    <p> As you make changes to your Live Share song list, this will help others in your music/singing team to view the changes instantly. You need to do the following to use this feature:</p>

    <p> - Create a shared Dropbox folder. This folder shall be used to store the Live Share lists and share it with your team. </p>
    <p> - Get the url for this folder and configure it in the app. </p>
    <p> - Get your team members to configure this url of the shared Dropbox folder in their app. </p>
    <p> - Create your Live Share lists </p>

    <p> Currently, you can only create your Live Share lists from OpenLP which should be installed on your computer. </p>
    <p> From OpenLP, create a service with some songs and save it in OpenLP Service Lite format (oszl). Make sure the file is saved in the respective shared Dropbox folder. </p>
    <p> Pull down the Live Share tab to refresh and your service files will be listed. Tap on it to view the songs. </p>

    <p> - Now you are all set to go. Your team members will be able to see your list of songs in their app. They will also see any update you make to the lists (from OpenLP). </p>

    <p> NOTE: We are working to make this even smoother but until then please use this and give your feedback. </p>
    </p>

    ]]>
    </string>
    <string name="message_warning_live_share_path">Configure live share path</string>
</resources>