<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/addToList"
        android:showAsAction="never"
        android:title="@string/addToPlayList"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/share_whatsapp"
        android:showAsAction="never"
        android:title="@string/share"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/export_pdf"
        android:showAsAction="never"
        android:title="@string/export_pdf"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/export_OpenLPService"
        android:showAsAction="never"
        android:title="@string/export_OpenLPService"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/play_song"
        android:showAsAction="never"
        android:title="@string/Play"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/present_song"
        android:showAsAction="never"
        android:title="@string/present"
        tools:ignore="AppCompatResource"/>
</menu>