<?xml version="1.0" encoding="utf-8"?><PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--<PreferenceCategory android:title="@string/pref_text_setting">-->
        <!--<ListPreference-->
            <!--android:key="prefSetFont"-->
            <!--android:entries="@array/setFont"-->
            <!--android:summary="@string/pref_sync_frequency_summary"-->
            <!--android:defaultValue="NORMAL"-->
            <!--android:entryValues="@array/setFontValues"-->
            <!--android:title="@string/pref_change_font_size" />-->
        <!--<ListPreference-->
            <!--android:key="prefSetFontStyle"-->
            <!--android:entries="@array/setFontStyle"-->
            <!--android:summary="@string/pref_text_style_summary"-->
            <!--android:defaultValue="NORMAL"-->
            <!--android:entryValues="@array/setFontStyleValues"-->
            <!--android:title="@string/pref_change_font_style" />-->
    <!--</PreferenceCategory>-->


    <PreferenceCategory
        android:title="@string/pref_text_setting"

        android:textColor="@color/background_floating_material_dark">
        <org.worshipsongs.preference.FontDialogPreference
            android:key="customFontSize"
            android:summary="Change the Font size and style for text"
            android:title="Font" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_color_settings">
        <org.worshipsongs.picker.ColorPickerPreference
            android:defaultValue="@integer/COLOR_RED"
            android:key="secondaryColor"
            android:summary="@string/secondary_summary"
            android:title="@string/secondary_color" />

        <org.worshipsongs.picker.ColorPickerPreference
            android:defaultValue="@integer/COLOR_DARK_GRAY"
            android:key="primaryColor"
            android:summary="@string/primary_summary"
            android:title="@string/primary_color" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_screen_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="prefKeepAwakeOn"
            android:summary="@string/awakeScreenSummary"
            android:title="@string/awakeScreenTitle" >
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_restore_default_settings">
        <org.worshipsongs.service.ResetDefaultSettingsService
            android:dialogMessage="Reset all values to their defaults"
            android:key="resetDialog"
            android:negativeButtonText="No"
            android:persistent="false"
            android:positiveButtonText="Yes"
            android:summary="Reset all settings to factory default"
            android:title="Reset to default" >
        </org.worshipsongs.service.ResetDefaultSettingsService>
    </PreferenceCategory>

</PreferenceScreen>