<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="5"
        android:paddingLeft="@dimen/ten_dp"
        android:paddingRight="@dimen/ten_dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/ten_dp"
            android:gravity="center"
            android:paddingLeft="@dimen/ten_dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/title"
            android:textColor="@color/dim_foreground_disabled_material_light"
            android:textSize="@dimen/ten_sp"/>

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/dim_foreground_disabled_material_light"
            android:textSize="@dimen/ten_sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/author"
            android:textColor="@color/dim_foreground_disabled_material_light"
            android:textSize="@dimen/ten_sp"/>

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/dim_foreground_disabled_material_light"
            android:textSize="@dimen/ten_sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/slide"
            android:textColor="@color/dim_foreground_disabled_material_light"
            android:textSize="@dimen/ten_sp"/>

        <TextView
            android:id="@+id/song_slide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/dim_foreground_disabled_material_light"
            android:textSize="@dimen/ten_sp"/>

    </LinearLayout>
</LinearLayout>